--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,6 @@ jobs:
         pytest
     - name: failure webhook
       if: ${{ failure() }}
-      run: curl $BUILD_FAILURE_WEBHOOK -F content='Build Failed! :('
       env:
-        BUILD_FAILURE_WEBHOOK: "${{ secrets.BUILD_FAILED }}"
+        BUILD_FAILURE_WEBHOOK: ${{ secrets.BUILD_FAILED }}
+      run: curl "$BUILD_FAILURE_WEBHOOK" -F content='Build Failed! :('
