--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,9 +8,9 @@ name: Python application
 
 on:
   push:
-    branches: [ main ]
+    branches: [ ** ]
   pull_request:
-    branches: [ main ]
+    branches: [ ** ]
 
 jobs:
   build:
