--- a/src/vehicle/requirements.txt
+++ b/src/vehicle/requirements.txt
@@ -2,8 +2,8 @@
 # This file contains all of our immediate dependencies for the vehicle program. Each line also contains the license of the respective dependency.
 
 
-Flask==1.1.2
-gpiozero==1.5.1
-pigpio==1.78
-netifaces==0.10.9
-adafruit-circuitpython-ht16k33==4.1.5
+Flask==1.1.2                                #BSD-3-Clause
+gpiozero==1.5.1                             #BSD-3-Clause
+pigpio==1.78                                #The Unlicense
+netifaces==0.10.9                           #MIT
+adafruit-circuitpython-ht16k33==4.1.5       #MIT
